service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kv-store
spec:
  selector:
    app: kv-store
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    name: http
  - protocol: TCP
    port: 8000
    targetPort: 8000
    name: metrics  
  type: ClusterIP
